# Consultant_job_matching

./: .env  DockerFile  README.md  acquire_text_from_file.py  boto_upload_file.py  clean_functions.py  data_models.py  extractor.py  install-chrome.sh  main.py  matcher.py  pyproject.toml  webscraper.py
incentro_cvs/: CV - Collin Aldaibis.txt  CV - Doris van der Meer.txt  CV - Gergely Tordai.txt  CV - Kevin van der Gugten.txt  CV - Luuk Hendriksz.txt  CV - Noortje van der Meijden.txt  CV - Peter Hendriks.txt  CV - Robin Vermeulen.txt  CV - Sven Hogenboom.txt  CV - Thierry Ernest.txt  CV - Thom Bleeker.txt  CV - Thomas Tunc.txt  CV - Ties Giele.txt  CV - Yvonne van de Glind.txt  Incentro CV Kevin.txt
skill_taxonomy/: digitalSkillsCollection_en.csv
